--- a/channelList.html
+++ b/channelList.html
@@ -7,7 +7,7 @@
     <title>Check </title>
     
     <link rel="stylesheet" href="https://raw.githubusercontent.com/joaomgcd/AutoToolsWebScreens/master/autotoolsstyle.css"> 
-    <meta name="autotoolswebscreen" type="variablehtml" id="channellist" label="Channel List" description="List of Channels + Servers" defaultValue="32">
+    <meta name="autotoolswebscreen" type="variablehtml" id="channelist" label="Channel List" description="List of Channels + Servers" defaultValue="32">
 </head>
 <body>
     <style>
