--- a/channelList.html
+++ b/channelList.html
@@ -20,7 +20,7 @@
 
     </style>
     <textarea name="checked" id="checked" cols="30" rows="10"></textarea>
-    <input type="button" value="Get Channels" onclick="alert(checked.value);AutoTools.sendCommand(checked.value)">
+    <input type="button" value="Get Channels" onclick="alert(window.checked.value);AutoTools.sendCommand(window.checked.value)">
     <div id="channelist"></div>
     
     
